--- a/src/main/resources/assets/adding_lard_/lang/en_us.json
+++ b/src/main/resources/assets/adding_lard_/lang/en_us.json
@@ -3,9 +3,11 @@
   "item.adding_lard_.bronzearmor_chestplate": "Bronze Chestplate",
   "item.adding_lard_.bandit_spawn_egg": "Bandit Spawn Egg",
   "item.adding_lard_.raw_bronze": "Raw Bronze",
+  "item.adding_lard_.skeleton_knight_spawn_egg": "Skeleton Knight Spawn Egg",
   "entity.adding_lard_.bandit": "Bandit",
   "item.adding_lard_.bandit_dagger": "Bandit Dagger",
   "item.adding_lard_.bronzearmor_leggings": "Bronze Leggings",
   "item.adding_lard_.bronzearmor_boots": "Bronze Boots",
+  "entity.adding_lard_.skeleton_knight": "Skeleton Knight",
   "item.adding_lard_.bronzearmor_helmet": "Bronze Helmet"
 }
