--- a/src/main/resources/assets/adding_lard_/lang/en_us.json
+++ b/src/main/resources/assets/adding_lard_/lang/en_us.json
@@ -1,11 +1,14 @@
 {
+  "item.adding_lard_.bandit_spawn_egg": "Bandit Spawn Egg",
+  "item.adding_lard_.bandit_dagger": "Bandit Dagger",
+  "item.adding_lard_.bronzearmor_boots": "Bronze Boots",
+  "fluid.adding_lard_.pee": "Pee",
   "item.adding_lard_.bronzeingot": "Bronzeingot",
   "item.adding_lard_.bronzearmor_chestplate": "Bronze Chestplate",
-  "item.adding_lard_.bandit_spawn_egg": "Bandit Spawn Egg",
   "item.adding_lard_.raw_bronze": "Raw Bronze",
   "entity.adding_lard_.bandit": "Bandit",
-  "item.adding_lard_.bandit_dagger": "Bandit Dagger",
+  "block.adding_lard_.pee": "Pee",
   "item.adding_lard_.bronzearmor_leggings": "Bronze Leggings",
-  "item.adding_lard_.bronzearmor_boots": "Bronze Boots",
-  "item.adding_lard_.bronzearmor_helmet": "Bronze Helmet"
+  "item.adding_lard_.bronzearmor_helmet": "Bronze Helmet",
+  "item.adding_lard_.pee_bucket": "Pee Bucket"
 }
