--- a/src/main/resources/assets/adding_lard_/lang/en_us.json
+++ b/src/main/resources/assets/adding_lard_/lang/en_us.json
@@ -7,5 +7,6 @@
   "item.adding_lard_.bandit_dagger": "Bandit Dagger",
   "item.adding_lard_.bronzearmor_leggings": "Bronze Leggings",
   "item.adding_lard_.bronzearmor_boots": "Bronze Boots",
-  "item.adding_lard_.bronzearmor_helmet": "Bronze Helmet"
+  "item.adding_lard_.bronzearmor_helmet": "Bronze Helmet",
+  "block.adding_lard_.bronze_ore": "Bronze Ore"
 }
