--- a/src/main/resources/assets/adding_lard_/lang/en_us.json
+++ b/src/main/resources/assets/adding_lard_/lang/en_us.json
@@ -3,6 +3,7 @@
   "item.adding_lard_.bandit_dagger": "Bandit Dagger",
   "item.adding_lard_.skeletonknight_spawn_egg": "Skeletonknight Spawn Egg",
   "item.adding_lard_.bronzearmor_boots": "Bronze Boots",
+  "block.adding_lard_.bronze_ore": "Bronze Ore",
   "entity.adding_lard_.skeletonknight": "Skeletonknight",
   "item.adding_lard_.bronzeingot": "Bronzeingot",
   "biome.adding_lard_.skeletonbiome": "Skeletonbiome",
