--- a/src/main/resources/assets/adding_lard_/lang/en_us.json
+++ b/src/main/resources/assets/adding_lard_/lang/en_us.json
@@ -11,5 +11,6 @@
   "item.adding_lard_.raw_bronze": "Raw Bronze",
   "entity.adding_lard_.bandit": "Bandit",
   "item.adding_lard_.bronzearmor_leggings": "Bronze Leggings",
-  "item.adding_lard_.bronzearmor_helmet": "Bronze Helmet"
+  "item.adding_lard_.bronzearmor_helmet": "Bronze Helmet",
+  "item.adding_lard_.bronzesword": "Bronzesword"
 }
